<resources>
    <string name="app_name">Furnace thermometer</string>
    <string name="ip_address">Ip address</string>
    <string name="temperature_limit_one">Limit 1</string>
    <string name="temperature_limit_two">Limit 2</string>
    <string name="none">None</string>
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="time_to_refresh_interface">Time to refresh interface</string>
    <string name="russian">Русский</string>
    <string name="english">English</string>
    <string name="save_changes">Save changes</string>
    <string name="time_to_refresh_temperature">Time to refresh temperature</string>
    <string name="time_to_send_notification">Time to send notification</string>
    <string name="stop">Stop</string>
    <string name="thermometer_silent_name">Thermometer background</string>
    <string name="thermometer_silent_description">Thermometer background description</string>
    <string name="thermometer_alert_name">Thermometer alerts</string>
    <string name="thermometer_alert_description">Alerts for temperature in the furnace</string>
</resources>