<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <EditText
        android:id="@+id/editTextNumber4"
        android:layout_width="115dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="225dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/time_to_refresh_interface"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="99dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/ip_address"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="99dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/temperature_limit"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/tLimitEtxt"
        android:layout_width="286dp"
        android:layout_height="78dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/ipAddressEtxt" />

    <Button
        android:id="@+id/button2"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/russian"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button3"
        android:layout_width="168dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/english"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber4" />

    <Button
        android:id="@+id/saveSettingsBtn"
        android:layout_width="357dp"
        android:layout_height="52dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:onClick="saveSettingsAction"
        android:text="@string/save_changes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <EditText
        android:id="@+id/ipAddressEtxt"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="192.168.0.120"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="225dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/time_to_refresh_temperature"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="115dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tLimitEtxt" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="115dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="225dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/time_to_send_notification"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>